--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -93,9 +93,38 @@ nav span a {
 
 .image {
   padding: 0 15px;
+  margin-bottom: 10px;
 }
 
 .image img {
   height: 200px;
   width: 300px;
+}
+/* middle end */
+
+/* Bottom */
+.bottom {
+  height: 500px;
+  background-image: url("../images/img-locations-background.jpg");
+  width: 1200px;
+  margin: auto;
+}
+
+.bottom-locations {
+  display: flex;
+  justify-content: center;
+}
+
+.bottom-text-content {
+  padding-top: 80px;
+  padding-bottom: 15px;
+}
+
+.box {
+  width: 300px;
+  background-color: black;
+  margin: 0 20px;
+  padding: 10px 0;
+  display: flex;
+  flex-direction: column;
 }
