--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -108,6 +108,7 @@ nav span a {
   background-image: url("../images/img-locations-background.jpg");
   width: 1200px;
   margin: auto;
+  padding-top: 80px;
 }
 
 .bottom-locations {
@@ -116,7 +117,6 @@ nav span a {
 }
 
 .bottom-text-content {
-  padding-top: 80px;
   padding-bottom: 15px;
 }
 
@@ -127,4 +127,15 @@ nav span a {
   padding: 10px 0;
   display: flex;
   flex-direction: column;
+}
+/* bottom end */
+
+/* Footer */
+.footer {
+  height: 200px;
+}
+
+.copyright {
+  text-align: left;
+  padding-left: 20px;
 }
